@@ -26,6 +26,7 @@ TODO_FILTERS+=CYRILLIC
 TODO_FILTERS+=HANGUL
 TODO_FILTERS+=HIRAGANA
 TODO_FILTERS+=KATAKANA
+TODO_FILTERS+=PRINT
 TODO_FILTERS+=ROMAN
 TODO_FILTERS+=UNICODE
 
