@@ -1,0 +1,7 @@
+#include "../../src/bsdconv.h"
+
+static const struct uint32_range ranges[] = {
+	{ 0x1F, 0x7E },
+};
+
+#include "unicode_range.c"
